(no-ticket) Fix overflow issues and refactor js.

--- a/oioioi/portals/static/common/portal.less
+++ b/oioioi/portals/static/common/portal.less
@@ -94,6 +94,7 @@
     opacity: 0;
     left: 0;
     border: none;
+    top: -3px;
 
     > li > a {
         color: @linkColor;
